# fin-rs

./: .gitignore  Cargo.toml
src/: app.rs  main.rs  store.rs  transaction.rs
src/classification/: handler.rs  mod.rs  model.rs  rule.rs  store.rs
src/import/: handler.rs
src/parser/: ing.rs  mod.rs
src/transaction/: handler.rs  mod.rs  model.rs  store.rs
src/transaction/parser/: ing.rs  mod.rs
src/ui/: mod.rs  transactions.rs
