[package]
name = "fin"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.24.0", features = ["v5", "serde"] }
chrono = {version = "0.4.45", features = ["serde"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ratatui = "0.30.2"
crossterm = "0.29.0"
